Add SSL cert and params for secure kafka connection and wire up checks config from yaml

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,10 @@ verify_ssl = true
 kafka-python = "*"
 pygresql = "*"
 aiohttp = "*"
+pytest = "*"
+pytest-asyncio = "*"
+pyyaml = "*"
+pyflakes = "*"
 
 [requires]
 python_version = "3.8"
