--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,6 +19,15 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel twine pipenv
+    - name: setup secrets
+      run: |
+        echo $ssl_cert > config/service.cert
+        echo $ssl_key > config/service.key
+        echo $ssl_ca > config/ca.pem
+      env:
+        ssl_cert: ${{ secrets.SSL_CERT }} 
+        ssl_key: ${{ secrets.SSL_KEY }}
+        ssl_ca: ${{ secrets.SSL_CA }}
     - name: Run tests
       run: |
         pipenv install --dev
