--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,9 +24,6 @@ jobs:
         echo $ssl_cert > config/service.cert
         echo $ssl_key > config/service.key
         echo $ssl_ca > config/ca.pem
-        cat config/ca.pem
-        cat config/service.cert
-        cat config/service.key
       env:
         ssl_cert: ${{ secrets.SSL_CERT }} 
         ssl_key: ${{ secrets.SSL_KEY }}
@@ -34,7 +31,7 @@ jobs:
     - name: Run tests
       run: |
         pipenv install --dev
-        pipenv run pytest
+        pipenv run pytest --disable-warnings
     - name: Build and publish
       run: |
         python setup.py sdist bdist_wheel
