--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,6 +32,8 @@ jobs:
       run: |
         pipenv install --dev
         pipenv run pytest --disable-warnings
+      env:
+        OBSERVER_DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
     - name: Build and publish
       run: |
         python setup.py sdist bdist_wheel
