allow providing pg password via ENV var

--- a/config/config.TEST.ini
+++ b/config/config.TEST.ini
@@ -10,6 +10,7 @@ ssl_cert_file=service.cert
 ssl_key_file=service.key
 
 [db]
-conn_string=postgres://avnadmin:xk0xgtoe38sd95y7@pg-7647e3a-tamizhgeek-06ac.aivencloud.com:29075/defaultdb?sslmode=require
+conn_string=postgres://avnadmin:password_place_holder@pg-7647e3a-tamizhgeek-06ac.aivencloud.com:29075/defaultdb?sslmode=require
+password=
 table=http_check_results
 schema=observer_test
